privando atributos na classe negociacao e alterando compilador

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "outDir": "app/js"
+        "outDir": "Angular/alurabank/app/js",
+        "noEmitOnError": true
     },
     "include": [
-        "app/ts/**/*"
+        "Angular/alurabank/app/ts/**/*"
     ]
 }
