adicionando JQuery no ts

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/pedroEifler/Formacao-Alura#readme",
   "dependencies": {
     "typescript": "^2.3.2"
+  },
+  "devDependencies": {
+    "@types/jquery": "^2.0.42"
   }
 }
